--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node server.js"
   },
-  "homepage": "",
+  "homepage": "https://yuns2.github.io/zoom",
   "devDependencies": {
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.7",
@@ -17,9 +18,11 @@
     "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.3",
     "gh-pages": "^3.2.3",
+    "heroku-cli": "^7.0.9",
     "localtunnel": "^2.0.2",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
+    "webrtc": "^1.14.1",
     "webrtc-adapter": "^8.1.1",
     "ws": "^8.4.2"
   }
