--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon"
   },
-  "homepage": "https://yuns2.github.io/zoom",
+  "engines": {
+    "npm": "6.14.14"
+  },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.7",
