--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
+    "build": "npm run build:server",
     "dev": "nodemon"
   },
   "engines": {
+    "node": "14.17.5",
     "npm": "6.14.14"
   },
   "devDependencies": {
@@ -19,8 +21,6 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.3",
-    "gh-pages": "^3.2.3",
-    "heroku-cli": "^7.0.9",
     "localtunnel": "^2.0.2",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
