--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "start": "node src/server.js",
-    "build": "npm run build:server",
     "dev": "nodemon"
   },
   "engines": {
@@ -27,5 +25,6 @@
     "webrtc": "^1.14.1",
     "webrtc-adapter": "^8.1.1",
     "ws": "^8.4.2"
-  }
+  },
+  "type": "module"
 }
